force-app/main/default/objects/CCR_ISOBARGetVoucherApiDetails__c/CCR_ISOBARGetVoucherApiDetails__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used by: CCR 
Description : To store details regarding ISOBAR API to get and resend voucher.</description>
    <label>CCR ISOBARGetVoucherApiDetails</label>
</CustomObject>