force-app/main/default/objects/CCR_ISOBARGetVoucherApiDetails__c/fields/CCR_Active__c.field-meta.xml
<CustomField>
    <fullName>CCR_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used By: CCR
Description: This field is for the active flag for the record</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>