force-app/main/default/objects/CCR_ISOBARGetVoucherApiDetails__c/fields/CCR_ApiKey__c.field-meta.xml
<CustomField>
    <fullName>CCR_ApiKey__c</fullName>
    <description>Used by: CCR Description : to store api key for ISOBAR authentication.</description>
    <label>ApiKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>