force-app/main/default/objects/CCR_ISOBARGetVoucherApiDetails__c/fields/CCR_ApiSecret__c.field-meta.xml
<CustomField>
    <fullName>CCR_ApiSecret__c</fullName>
    <description>Used by: CCR Description : to store api secret for ISOBAR authentication.</description>
    <label>ApiSecret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>