force-app/main/default/objects/CCR_ISOBARGetVoucherApiDetails__c/fields/CCR_AuthenticationEndpoint__c.field-meta.xml
<CustomField>
    <fullName>CCR_AuthenticationEndpoint__c</fullName>
    <description>Used by: CCR Description : To store endpoint for authentication.</description>
    <label>Authentication Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>