force-app/main/default/objects/CCR_ISOBARGetVoucherApiDetails__c/fields/CCR_Country__c.field-meta.xml
<CustomField>
    <fullName>CCR_Country__c</fullName>
    <description>Used by: CCR Description : to store country iso code for ISOBAR authentication.</description>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>