force-app/main/default/objects/CCR_ISOBARGetVoucherApiDetails__c/fields/CCR_GetVoucherEndpoint__c.field-meta.xml
<CustomField>
    <fullName>CCR_GetVoucherEndpoint__c</fullName>
    <description>Used by: CCR Description : to store endpoint url for ISOBAR Get Voucher API.</description>
    <label>Get Voucher Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>