force-app/main/default/objects/CCR_ISOBARGetVoucherApiDetails__c/fields/CCR_PrivateKey__c.field-meta.xml
<CustomField>
    <fullName>CCR_PrivateKey__c</fullName>
    <description>Used by: CCR Description : to store private key to encrypt phone number.</description>
    <label>Private Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>