force-app/main/default/objects/CCR_ISOBARGetVoucherApiDetails__c/fields/CCR_ResendVoucherEndpoint__c.field-meta.xml
<CustomField>
    <fullName>CCR_ResendVoucherEndpoint__c</fullName>
    <description>Used by: CCR Description : to store endpoint url for ISOBAR resend voucher API.</description>
    <label>Resend Voucher Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>