force-app/main/default/objects/CCR_ISOBARGetVoucherApiDetails__c/fields/CCR_SaltKey__c.field-meta.xml
<CustomField>
    <fullName>CCR_SaltKey__c</fullName>
    <description>Used by: CCR Description : to store salt key to encrypt phone number.</description>
    <label>Salt Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>